# EECE_608

./: .gitignore  CLAUDE.md  DP_Audit_Progress_Slide.pptx  MOVE_PROJECT.cmd  README.md  claude_summary.md  dp_audit_summary.pptx  move_project.ps1  pyproject.toml
Fable/: BUS_OUTBOX_2026-07-17.md  COLLABORATION_PROTOCOL.md  DECISIONS.md  FABLE_IDEAS.md  HANDSHAKE_2026-07-16_SESSION2.md  KAGGLE_RUN_LOG_2026-07-17.md  NOTICE_RELOCATION_2026-07-16.md  README.md  TASKS_FOR_SOL_2026-07-16.md  VALIDATION_REPORT_2026-07-16.md
GPT_SOL/: COLLABORATION_PROTOCOL.md  DECISION_LOG.md  E3_KAGGLE_ARTIFACT_REVIEW_2026-07-19.md  EFFICIENT_EXCHANGE_PROTOCOL.md  HANDOFF_TO_FABLE.md  IDEAS_AND_HYPOTHESES.md  IMPLEMENTATION_QUEUE.md  PROJECT_STATE.md  README.md  STATUS_2026-07-16.md
agent_bus/: .gitignore  HANDOFF_SOL_2026-07-16.md  README.md  SETUP.md  _probe_sync.txt  bus_core.py  server.py  test_bus.py
autoresearch/: agent_loop.py  experiment.py  prepare.py  program.md
codex/: SATURATION_HANDOFF.md  analyze_raw_lira_pathology.py  build_framework_ledger.py  canonical_results_table.md  claim_register.md  current_state_gap_analysis.md  dp_sgd_audit_framework_colab_validation.ipynb  framework_output_contract.md  framework_validation_gpu_protocol.md  framework_validation_gpu_scale.ipynb  framework_validation_gpu_scale_kaggle.ipynb  framework_validation_gpu_scale_kaggle_v20260413_01.ipynb  framework_validation_protocol.md  framework_work_program.md  gap_explanation_framework.md  raw_lira_pilot_findings.md  run_decomposition_sweep.py  run_final_paper_checks.py  run_framework_validation.py  (+11 more)
(+173 files in other folders)
